[package]
name = "game"
version = "0.1.0"
authors = ["r00ster91 <r00ster91@protonmail.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc4fe9b186db3f32eef38fc4241289df480fa949" }
rand = { version = "0.8", features = ["small_rng"] }

# Enable optimizations for all packages except for our own code
# in order to have fast compilation while retaining good runtime performance.
[profile.dev.package."*"]
opt-level = 3
